--- a/geekshop/products/templates/products/products.html
+++ b/geekshop/products/templates/products/products.html
@@ -109,7 +109,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; GeekShop 2020</p>
+        <p class="m-0 text-center text-white">Copyright &copy; GeekShop {{ date|date:"Y" }}</p>
     </div>
     <!-- /.container -->
 </footer>
