--- a/geekshop/products/templates/products/products.html
+++ b/geekshop/products/templates/products/products.html
@@ -63,7 +63,7 @@
                         <div class="card h-100">
                             <a href="#">
                                 <img class="card-img-top"
-                                     src="{{ product.img }}"
+                                     src="{% static product.img %}"
                                      alt="">
                             </a>
                             <div class="card-body">
