--- a/geekshop/users/templates/users/register.html
+++ b/geekshop/users/templates/users/register.html
@@ -32,14 +32,18 @@
                         </div>
                         <div class="form-row">
                             <div class="col-md-6">
-                                <label class="small mb-1" for="inputUsername">Имя пользователя</label>
-                                {{ form.username }}
+                                <div class="form-group">
+                                    <label class="small mb-1" for="{{ form.username.id_for_label }}">Имя
+                                        пользователя</label>
+                                    {{ form.username }}
+                                </div>
                             </div>
                             <div class="col-md-6">
-                                <label class="small mb-1" for="{{ form.email.id_for_label }}">Адрес
-                                    электронной
-                                    почты</label>
-                                {{ form.email }}
+                                <div class="form-group">
+                                    <label class="small mb-1" for="{{ form.email.id_for_label }}">Адрес электронной
+                                        почты</label>
+                                    {{ form.email }}
+                                </div>
                             </div>
                         </div>
                         <div class="form-row">
