add user profile

--- a/geekshop/users/templates/users/profile.html
+++ b/geekshop/users/templates/users/profile.html
@@ -58,7 +58,7 @@
                     </div>
                 </form>
             </div>
-            {% include 'baskets/baskets.html' %}
+            {# {% include 'baskets/baskets.html' %} #}
         </div>
     </div>
 {% endblock %}
