--- a/geekshop/users/templates/users/profile.html
+++ b/geekshop/users/templates/users/profile.html
@@ -9,10 +9,17 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-7">
-                {% if form.errors %}
-                    <div class="alert alert-warning alert-dismissible fade show" role="alert"
+                {% if form.errors or messages %}
+                    <div class="alert {% if messages %} alert-success {% else %} alert-warning {% endif %} alert-dismissible fade show"
+                         role="alert"
                          style="margin-top: 50px;">
-                        {{ form.errors|escape }}
+                        {% if messages %}
+                            {% for message in messages %}
+                                {{ message }}
+                            {% endfor %}
+                        {% else %}
+                            {{ form.errors|escape }}
+                        {% endif %}
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
