--- a/geekshop/admins/templates/admins/admin-products-create.html
+++ b/geekshop/admins/templates/admins/admin-products-create.html
@@ -4,20 +4,20 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid">
-                <h1 class="mt-4">Создание пользователя</h1>
-                <form action="{% url 'admins:admins_user_create' %}" method="post" enctype="multipart/form-data">
+                <h1 class="mt-4">Создание продукта</h1>
+                <form action="{% url 'admins:admins_product_create' %}" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="form-row">
                         <div class="col-lg-6">
                             <div class="form-group">
-                                <label class="small mb-1" for="{{ form.first_name.id_for_label }}">Имя</label>
-                                {{ form.first_name }}
+                                <label class="small mb-1" for="{{ form.name.id_for_label }}">Название</label>
+                                {{ form.name }}
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="form-group">
-                                <label class="small mb-1" for="{{ form.last_name.id_for_label }}">Фамилия</label>
-                                {{ form.last_name }}
+                                <label class="small mb-1" for="{{ form.description.id_for_label }}">Описание</label>
+                                {{ form.description }}
                             </div>
                         </div>
                     </div>
@@ -32,23 +32,18 @@
                     </div>
                     <div class="form-row">
                         <div class="col-lg-6">
-                            <label class="small mb-1" for="{{ form.username.id_for_label }}">Имя пользователя</label>
-                            {{ form.username }}
+                            <label class="small mb-1" for="{{ form.price.id_for_label }}">Цена</label>
+                            {{ form.price }}
                         </div>
                         <div class="col-lg-6">
-                            <label class="small mb-1" for="{{ form.email.id_for_label }}">Адрес электронной
-                                почты</label>
-                            {{ form.email }}
+                            <label class="small mb-1" for="{{ form.quantity.id_for_label }}">Количество</label>
+                            {{ form.quantity }}
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="col-lg-6">
-                            <label class="small mb-1" for="{{ form.password1.id_for_label }}">Пароль</label>
-                            {{ form.password1 }}
-                        </div>
-                        <div class="col-lg-6">
-                            <label class="small mb-1" for="{{ form.password2.id_for_label }}">Повторите пароль</label>
-                            {{ form.password2 }}
+                            <label class="small mb-1" for="{{ form.category.id_for_label }}">Категория</label>
+                            {{ form.category }}
                         </div>
                     </div>
                     <div class="form-row">
