--- a/geekshop/admins/templates/admins/admin-products-read.html
+++ b/geekshop/admins/templates/admins/admin-products-read.html
@@ -4,65 +4,43 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid">
-                <h1 class="mt-4">Пользователи</h1>
+                <h1 class="mt-4">Продукты</h1>
                 <div class="card mb-4">
                     <div class="card-header">
                         <i class="fas fa-table mr-1"></i>
-                        Пользователи
+                        Продукты
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
                             <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                 <thead>
                                 <tr>
-                                    <th>Имя пользователя</th>
-                                    <th>Имя</th>
-                                    <th>Фамилия</th>
-                                    <th>Адрес эл. почты</th>
-                                    <th>Персонал сайта</th>
-                                    <th>Активный</th>
+                                    <th>Название</th>
+                                    <th>Описание</th>
+                                    <th>Цена</th>
+                                    <th>Количество</th>
+                                    <th>Категория</th>
                                 </tr>
                                 </thead>
                                 <tfoot>
                                 <tr>
-                                    <th>Имя пользователя</th>
-                                    <th>Имя</th>
-                                    <th>Фамилия</th>
-                                    <th>Адрес эл. почты</th>
-                                    <th>Персонал сайта</th>
-                                    <th>Активный</th>
+                                    <th>Название</th>
+                                    <th>Описание</th>
+                                    <th>Цена</th>
+                                    <th>Количество</th>
+                                    <th>Категория</th>
                                 </tr>
                                 </tfoot>
                                 <tbody>
-                                {% for user in users %}
+                                {% for product in products %}
                                     <tr>
-                                        <td><a href="{% url 'admins:admins_user_update' user.id %}"
-                                               style="color: dodgerblue">{{ user.username }}</a>
+                                        <td><a href="{% url 'admins:admins_product_update' product.id %}"
+                                               style="color: dodgerblue">{{ product.name }}</a>
                                         </td>
-                                        <td>{{ user.first_name }}</td>
-                                        <td>{{ user.last_name }}</td>
-                                        <td>{{ user.email }}</td>
-
-
-                                        <td class="text-center">
-                                            {% if user.is_staff %}
-                                                <i class="fas fa-check-circle"></i>
-                                            {% else %}
-                                                <i class="fas fa-times-circle"></i>
-                                            {% endif %}
-                                        </td>
-
-
-                                        <td class="text-center">
-                                            {% if user.is_active %}
-                                                <i class="fas fa-check-circle"></i>
-                                            {% else %}
-
-                                                <i class="fas fa-times-circle"></i>
-                                            {% endif %}
-                                        </td>
-
-
+                                        <td>{{ product.description }}</td>
+                                        <td>{{ product.price }}</td>
+                                        <td>{{ product.quantity }}</td>
+                                        <td>{{ product.category }}</td>
                                     </tr>
                                 {% endfor %}
                                 </tbody>
@@ -70,8 +48,8 @@
                         </div>
                     </div>
                     <div class="card-footer">
-                        <a href="{% url 'admins:admins_user_create' %}">
-                            <button class="btn btn-success">Создать пользователя</button>
+                        <a href="{% url 'admins:admins_product_create' %}">
+                            <button class="btn btn-success">Создать продукт</button>
                         </a>
                     </div>
                 </div>
