--- a/geekshop/admins/templates/admins/admin-products-create.html
+++ b/geekshop/admins/templates/admins/admin-products-create.html
@@ -14,15 +14,18 @@
                                 {{ form.name }}
                             </div>
                         </div>
+                    </div>
+                    <div class="form-row">
                         <div class="col-lg-6">
                             <div class="form-group">
-                                <label class="small mb-1" for="{{ form.description.id_for_label }}">Описание</label>
+                                <label class="small mb-1"
+                                       for="{{ form.description.id_for_label }}">Описание</label>
                                 {{ form.description }}
                             </div>
                         </div>
                     </div>
-                    <div class="form-row mb-2">
-                        <div class="col-lg-12">
+                    <div class="form-row">
+                        <div class="col-lg-6">
                             <div class="custom-file">
                                 {{ form.image }}
                                 <label class="custom-file-label" for="{{ form.image.id_for_label }}">Выберите
@@ -35,6 +38,8 @@
                             <label class="small mb-1" for="{{ form.price.id_for_label }}">Цена</label>
                             {{ form.price }}
                         </div>
+                    </div>
+                    <div class="form-row">
                         <div class="col-lg-6">
                             <label class="small mb-1" for="{{ form.quantity.id_for_label }}">Количество</label>
                             {{ form.quantity }}
@@ -47,7 +52,7 @@
                         </div>
                     </div>
                     <div class="form-row">
-                        <div class="col-lg-12" style="margin-top: 33px;">
+                        <div class="col-lg-6" style="margin-top: 33px;">
                             <input class="btn btn-info btn-block" type="submit" value="Сохранить">
                         </div>
                     </div>
