--- a/geekshop/products/templates/products/products.html
+++ b/geekshop/products/templates/products/products.html
@@ -75,15 +75,17 @@
                                     <h5>{{ product.price }} {{ currency }}.</h5>
                                     <p class="card-text">{{ product.description }}</p>
                                 </div>
-                                <div class="card-footer text-center">
-                                    <a href="{% url 'baskets:basket' product.id %}" class="btn btn-outline-success">Отправить
-                                        в корзину</a>
-                                </div>
+                                <form action="{% url 'baskets:basket' product_id=product.id %}" method="post">
+                                    {% csrf_token %}
+                                    <div class="card-footer text-center">
+                                        <button type="submit" class="btn btn-outline-success">Отправить
+                                            в корзину
+                                        </button>
+                                    </div>
+                                </form>
                             </div>
                         </div>
-
                     {% endfor %}
-
                 </div>
 
                 <nav aria-label="Page navigation example">
