--- a/geekshop/products/templates/products/products.html
+++ b/geekshop/products/templates/products/products.html
@@ -17,9 +17,16 @@
                 <h1 class="my-4">GeekShop</h1>
                 <div class="list-group">
                     {% for category in categories %}
-                        <a href="{% url 'products:category' category.id %}" class="list-group-item">{{ category }}</a>
+                        <form action="{% url 'products:category' category_id=category.id %}" method="post">
+                            {% csrf_token %}
+                            <a href="{% url 'products:category' category.id %}" class="list-group-item">{{ category }}</a>
+                        </form>
                     {% endfor %}
-                    <a href="{% url 'products:index' %}" class="list-group-item"><b>Все категории</b></a>
+                    <form action="{% url 'products:index' %}" method="post">
+                        {% csrf_token %}
+                        <a href="{% url 'products:index' %}" class="list-group-item"><b>Все категории</b></a>
+                    </form>
+
                 </div>
 
             </div>
