--- a/geekshop/products/templates/include/product_items.html
+++ b/geekshop/products/templates/include/product_items.html
@@ -1,26 +1,29 @@
-{% for product in products %}
-    <div class="col-lg-4 col-md-6 mb-4">
-        <div class="card h-100">
-            <a href="#">
-                <img class="card-img-top"
-                     src="{{ product.image.url }}"
-                     alt="">
-            </a>
-            <div class="card-body">
-                <h4 class="card-title">
-                    <a href="#">{{ product.name }}</a>
-                </h4>
-                <h5>{{ product.price }} {{ currency }}.</h5>
-                <p class="card-text">{{ product.description }}</p>
-            </div>
-            <form action="{% url 'baskets:basket' product_id=product.id %}" method="post">
-                {% csrf_token %}
-                <div class="card-footer text-center">
-                    <button type="submit" class="btn btn-outline-success">Отправить
-                        в корзину
-                    </button>
+<div class="product_items">
+    <div class="row">
+        {% for product in products %}
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                    <a href="#">
+                        <img class="card-img-top"
+                             src="{{ product.image.url }}"
+                             alt="">
+                    </a>
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            <a href="#">{{ product.name }}</a>
+                        </h4>
+                        <h5>{{ product.price }} {{ currency }}.</h5>
+                        <p class="card-text">{{ product.description }}</p>
+                    </div>
+                    <div class="card-footer text-center">
+                        <div class="product_add">
+                            <button type="button" name="{{ product.id }}" value="{{ products.number }}"
+                                    class="btn btn-outline-success">Отправить в корзину</button>
+                        </div>
+                    </div>
                 </div>
-            </form>
-        </div>
+            </div>
+        {% endfor %}
     </div>
-{% endfor %}
+</div>
+
