--- a/geekshop/admins/templates/admins/admin-users-update-delete.html
+++ b/geekshop/admins/templates/admins/admin-users-update-delete.html
@@ -46,9 +46,16 @@
                                 {{ form.email }}
                             </div>
                         </div>
-
-                        <div class="col-lg-12" style="margin-top: 33px;">
-                            <input class="btn btn-info btn-block" type="submit" value="Сохранить">
+                        <div class="form-row">
+                            <div class="col-lg-6">
+                                <label class="small mb-1" for="{{ form.age.id_for_label }}">Возраст</label>
+                                {{ form.age }}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12" style="margin-top: 33px;">
+                                <input class="btn btn-info btn-block" type="submit" value="Сохранить">
+                            </div>
                         </div>
                     </form>
                     <div class="row">
