--- a/geekshop/users/templates/users/profile.html
+++ b/geekshop/users/templates/users/profile.html
@@ -72,6 +72,23 @@
                             <label class="small mb-1" for="{{ form.age.id_for_label }}">Возраст</label>
                             {{ form.age }}
                         </div>
+                        <div class="col-lg-6">
+                            <label class="small mb-1" for="{{ profile.gender.id_for_label }}">Пол</label>
+                            {{ profile.gender }}
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="col-lg-6">
+                            <label class="small mb-1" for="{{ profile.tagLine.id_for_label }}">Тэги</label>
+                            {{ profile.tagLine }}
+                        </div>
+                        <div class="col-lg-6">
+                            <label class="small mb-1" for="{{ profile.about.id_for_label }}">О пользователе</label>
+                            {{ profile.about }}
+                        </div>
+                    </div>
+                    <div class="form-row">
+
                     </div>
                     <div class="form-row">
                         <div class="col-lg-12" style="margin-top: 33px;">
