--- a/geekshop/orders/templates/order_form.html
+++ b/geekshop/orders/templates/order_form.html
@@ -1,8 +1,8 @@
-{% extends "mainapp/base.html" %}
+{% extends "products/base.html" %}
 {% load static %}
 
 {% block content %}
-    {% include 'ordersapp/includes/inc_order_summary.html' %}
+    {% include 'include/inc_order_summary.html' %}
     <div class="order_form">
         <form action="" method="post">
             {% csrf_token %}
@@ -49,7 +49,7 @@
             </table>
             <button type="submit" value="сохранить" class="btn btn-default btn-round form-control last">сохранить
             </button>
-            {% include 'ordersapp/includes/inc_order_actions.html' %}
+            {% include 'include/inc_order_actions.html' %}
         </form>
     </div>
 
