--- a/geekshop/orders/templates/orders/order_list.html
+++ b/geekshop/orders/templates/orders/order_list.html
@@ -48,6 +48,11 @@
                                 </a>
                             {% endif %}
                         </td>
+                        <td>
+                            <a href="{% url 'orders:status_change' item.pk %}">
+                                изменить статус
+                            </a>
+                        </td>
                     </tr>
                 {% endif %}
             {% endfor %}
