--- a/geekshop/products/templates/products/base.html
+++ b/geekshop/products/templates/products/base.html
@@ -101,6 +101,8 @@
 <script src="{% static 'vendor/fontawesome/fontawesome-icons.js' %}" crossorigin="anonymous"></script>
 
 <script src="{% static 'js/baskets.js' %}"></script>
+<script src="{% static 'js/jquery_formset.js' %}"></script>
+<script src="{% static 'js/orders_scripts.js' %}"></script>
 
 </body>
 
