--- a/geekshop/baskets/templates/baskets/baskets.html
+++ b/geekshop/baskets/templates/baskets/baskets.html
@@ -2,8 +2,11 @@
 
 <div class="basket_list">
     {% if baskets %}
+        {#        <h4 class="mt-3 mb-3 d-flex justify-content-between align-items-center mb-3">#}
+        {#            Корзина <span class="badge badge-secondary badge-pill">{{ variable|total_quantity:user }}</span>#}
+        {#        </h4>#}
         <h4 class="mt-3 mb-3 d-flex justify-content-between align-items-center mb-3">
-            Корзина <span class="badge badge-secondary badge-pill">{{ variable|total_quantity:user }}</span>
+            Корзина <span class="badge badge-secondary badge-pill">{{ baskets.0.total_quantity }}</span>
         </h4>
         {% for basket in baskets %}
             <div class="card mb-3">
@@ -15,7 +18,7 @@
                     <li class="list-group-item bg-light">
                         <div class="row text-center">
                             <div class="col-lg-4">
-                                <form action="{% url 'baskets:basket_edit' basket_id=basket.id quantity=basket.quantity%}" >
+                                <form action="{% url 'baskets:basket_edit' basket_id=basket.id quantity=basket.quantity %}">
                                     {% csrf_token %}
                                     <input name="{{ basket.id }}" type="number" class="form-control"
                                            value="{{ basket.quantity }}" min="0">
@@ -36,9 +39,13 @@
             </div>
         {% endfor %}
         <div class="card mb-3">
+            {#            <div class="card-footer">#}
+            {#                <p class="float-left">Итого</p>#}
+            {#                <h4 class="float-right">{{ variable|total_sum:user }} руб.</h4>#}
+            {#            </div>#}
             <div class="card-footer">
                 <p class="float-left">Итого</p>
-                <h4 class="float-right">{{ variable|total_sum:user }} руб.</h4>
+                <h4 class="float-right">{{ baskets.0.total_sum }} руб.</h4>
             </div>
         </div>
         <button type="button" class="btn btn-success btn-lg float-right">Оформить</button>
