Added orders create from profile. Bugs fixes

--- a/geekshop/baskets/templates/baskets/baskets.html
+++ b/geekshop/baskets/templates/baskets/baskets.html
@@ -48,7 +48,12 @@
                 <h4 class="float-right">{{ baskets.0.total_sum }} руб.</h4>
             </div>
         </div>
-        <button type="button" class="btn btn-success btn-lg float-right">Оформить</button>
+        <div class="order_add">
+            <form action="{% url 'orders:create' %}" >
+                {% csrf_token %}
+                <button name="order_add_button" type="submit" class="btn btn-success btn-lg float-right">Оформить</button>
+            </form>
+        </div>
     {% else %}
         <h4 class="mt-3 mb-3 text-center">Корзина пуста</h4>
     {% endif %}
