--- a/geekshop/admins/templates/admins/admin-products-create.html
+++ b/geekshop/admins/templates/admins/admin-products-create.html
@@ -52,6 +52,15 @@
                         </div>
                     </div>
                     <div class="form-row">
+                        <div class="col-lg-0">
+                            <div class="form-group">
+                                {{ form.is_active }}
+                                <label class="small mb-1"
+                                       for="{{ form.is_active.id_for_label }}">Активность</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-row">
                         <div class="col-lg-6" style="margin-top: 33px;">
                             <input class="btn btn-info btn-block" type="submit" value="Сохранить">
                         </div>
