--- a/geekshop/admins/templates/admins/admin-category-read.html
+++ b/geekshop/admins/templates/admins/admin-category-read.html
@@ -36,11 +36,11 @@
                                                style="color: dodgerblue">{{ category.name }}</a>
                                         </td>
                                         <td>{{ category.description }}</td>
-                                        <td>
+                                        <td class="text-center">
                                             {% if category.is_active %}
-                                                Да
+                                                <i class="fas fa-check-circle"></i>
                                             {% else %}
-                                                Нет
+                                                <i class="fas fa-times-circle"></i>
                                             {% endif %}
                                         </td>
                                         <td>
