--- a/geekshop/admins/templates/admins/admin-products-read.html
+++ b/geekshop/admins/templates/admins/admin-products-read.html
@@ -45,10 +45,11 @@
                                         <td>{{ product.price }}</td>
                                         <td>{{ product.quantity }}</td>
                                         <td>{{ product.category }}</td>
-                                        <td>{% if product.is_active %}
-                                                Да
+                                        <td class="text-center">
+                                            {% if product.is_active %}
+                                                <i class="fas fa-check-circle"></i>
                                             {% else %}
-                                                Нет
+                                                <i class="fas fa-times-circle"></i>
                                             {% endif %}
                                         </td>
                                         <td>
