--- a/geekshop/admins/templates/admins/admin-users-update-delete.html
+++ b/geekshop/admins/templates/admins/admin-users-update-delete.html
@@ -17,6 +17,8 @@
                                     {{ form.first_name }}
                                 </div>
                             </div>
+                        </div>
+                        <div class="form-row">
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label class="small mb-1"
@@ -25,8 +27,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="form-row mb-2">
-                            <div class="col-lg-12">
+                        <div class="form-row">
+                            <div class="col-lg-6">
                                 <div class="custom-file">
                                     {{ form.image }}
                                     <label class="custom-file-label" for="{{ form.image.id_for_label }}">Выберите
@@ -40,6 +42,8 @@
                                     пользователя</label>
                                 {{ form.username }}
                             </div>
+                        </div>
+                        <div class="form-row">
                             <div class="col-lg-6">
                                 <label class="small mb-1" for="{{ form.email.id_for_label }}">Адрес электронной
                                     почты</label>
@@ -52,20 +56,18 @@
                                 {{ form.age }}
                             </div>
                         </div>
+                        <div class="form-row">
+                            <div class="col-lg-6">
+                                {{ form.is_active }}
+                                <label class="small mb-1" for="{{ form.is_active.id_for_label }}">Активен</label>
+                            </div>
+                        </div>
                         <div class="row">
-                            <div class="col-lg-12" style="margin-top: 33px;">
+                            <div class="col-lg-6" style="margin-top: 33px;">
                                 <input class="btn btn-info btn-block" type="submit" value="Сохранить">
                             </div>
                         </div>
                     </form>
-                    <div class="row">
-                        <div class="col-lg-12" style="margin-top: 33px;">
-                            <form action="{% url 'admins:admins_user_delete' user.id %}" method="post">
-                                {% csrf_token %}
-                                <input class="btn btn-danger btn-block" type="submit" value="Удалить">
-                            </form>
-                        </div>
-                    </div>
                 </div>
             </div>
         </main>
