--- a/geekshop/users/templates/users/login.html
+++ b/geekshop/users/templates/users/login.html
@@ -11,9 +11,15 @@
                         {% for message in messages %}
                             {{ message }}
                         {% endfor %}
-                    {% else %}
+                    {% elif form.non_field_errors %}
                         {% for error in form.non_field_errors %}
                             {{ error }}
+                        {% endfor %}
+                    {% elif form.errors %}
+                        {% for field in form %}
+                            {% for error in field.errors %}
+                                <p> {{ error }} </p>
+                            {% endfor %}
                         {% endfor %}
                     {% endif %}
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
